--- a/podstrona.css
+++ b/podstrona.css
@@ -76,9 +76,8 @@ footer {
     margin-bottom: 10px;
 }
 
-/* Dodatkowe style dla recenzji */
 main h2 {
-    color: #0073e6;
+    color: #e60000;
 }
 
 main p {
